main : Fix frontend contract
