# gen/ts/sso/api/auth/v1/auth_connect.ts
@@ -1,4 +1,4 @@
-// @generated by protoc-gen-connect-es v1.6.1
+// @generated by protoc-gen-connect-es v1.6.1 with parameter "target=ts"
 // @generated from file sso/api/auth/v1/auth.proto (package sso.api.auth.v1, syntax proto3)
 /* eslint-disable */
 // @ts-nocheck
@@ -49,8 +49,6 @@ export const AuthApiService = {
       kind: MethodKind.Unary,
     },
     /**
-     * --- Профиль ---
-     *
      * @generated from rpc sso.api.auth.v1.AuthApiService.GetProfile
      */
     getProfile: {
@@ -60,8 +58,6 @@ export const AuthApiService = {
       kind: MethodKind.Unary,
     },
     /**
-     * --- Permissions ---
-     *
      * @generated from rpc sso.api.auth.v1.AuthApiService.GetPermissions
      */
     getPermissions: {
@@ -71,5 +67,5 @@ export const AuthApiService = {
       kind: MethodKind.Unary,
     },
   }
-};
+} as const;
 
